--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width"> 
         <title> Photography</title>
+        <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     <body>
         <h1> My Favorite Photos</h1>
-        
+
         
     </body>
 </html>
