--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
         <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     <body>
+        <div class="navbar">
+            <ul>
+                <li> <a href="#home"> Home</a></li>
+                <li> <a href="#review"> Review</a></li>
+                <li> <a href="#sample Images"> Sample Images</a></li>
+                <li> <a href="#about"> About</a></li>
+            </ul>
+          </div>
+          
         <h1> My Favorite Photos</h1>
 
         
