Added form action

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </div>
                 <form action="/html/tags/html_form_tag_action.cfm" method="post">
                     <input type="text" placeholder="name"><br>                    
-                    <input type="email" placeholder="example@gmail.com"><br>
+                    <input type="email" placeholder="example@gmail.com"><br><br>
                        <input type="submit" value="Submit">
                  </form>
                  <div class="footer">
